--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
-    "@material-ui/core": "^1.2.0",
+    "@material-ui/core": "^1.2.3",
     "@material-ui/icons": "^1.1.0",
     "material-ui": "^0.20.1",
     "meteor-node-stubs": "^0.3.2",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "@material-ui/core": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2"
   }
-
-
 }
